--- a/templates/page.html
+++ b/templates/page.html
@@ -23,12 +23,12 @@
 	  <!-- Profile -->
 	  <div class="col-md-10">
 	    <div class="profile-pic">
-	      <img src="static/images/danielhillerstrom.jpg" alt="$fullname$" class="img-responsive img-thumbnail">
+	      
 	    </div>
 	    <div>
 	      <h2 class="media-heading">$fullname$ <small>($position$)</small></h2>
-	      <code>email = (&#955;name . name ++ &quot;@ed.ac.uk&quot;) : string &#8594; string</code><br>
-	      <code>email &quot;daniel.hillerstrom&quot;</code><br><br>
+	      amna.shahab@ed.ac.uk<br>
+	      
 	      Informatics Forum<br>
 	      Office $office$<br>
 	      10 Crichton Street<br>
@@ -42,7 +42,7 @@
 	    <div class="media">
 	      <div class="media-top">
 		<a href="http://www.inf.ed.ac.uk">
-		  <img src="static/images/informatics.jpg" alt="Informatics, University of Edinburgh" class="affliation-informatics img-responsive">
+		  <img src="/static/images/informatics.jpg" alt="Informatics, University of Edinburgh" class="affliation-informatics img-responsive">
 		</a>
 	      </div>
 	    </div>
@@ -50,7 +50,7 @@
 	    <div class="media">
 	      <div class="media-top">
 		<a href="http://pervasiveparallelism.inf.ed.ac.uk">
-		  <img src="static/images/ppar.jpg" alt="Pervasive Parallelism, Informatics, University of Edinburgh" class="affliation-ppar img-responsive">
+		  <img src="/static/images/ppar.jpg" alt="Pervasive Parallelism, Informatics, University of Edinburgh" class="affliation-ppar img-responsive">
 		</a>
 	      </div>
 	    </div>
